# icloud-kde

./: .gitignore  CMakeLists.txt
docs/developer/: backend-compatibility.md  daemon-api.md  filesystem-semantics.md  secrets-and-auth.md  sync-invariants.md
docs/user/: setup.md
kde/: CMakeLists.txt
kde/baloo/: CMakeLists.txt  baloocontroller.cpp  main.cpp
kde/common/: CMakeLists.txt  daemonclient.cpp  daemonclient.h  pathguard.cpp  pathguard.h
kde/kcm/: CMakeLists.txt  daemonclient.cpp  daemonclient.h  icloudconfigmodule.cpp  icloudconfigmodule.h  kcm_icloud.json
kde/kcm/ui/: AccountPage.qml  RecoveryPage.qml  SyncPage.qml  main.qml
kde/notifier/: CMakeLists.txt  icloud-kde.notifyrc  main.cpp  notificationpolicy.cpp  org.kde.icloud-drive.notifier.desktop
kde/places/: CMakeLists.txt  main.cpp  placescontroller.cpp  placescontroller.h
kde/secret-tool/: CMakeLists.txt  main.cpp
kde/service-menu/: CMakeLists.txt  icloudfileitemaction.cpp  icloudfileitemaction.json
src/icloud_kde/: __init__.py
src/icloud_kde/backend/: __init__.py  contract.py
src/icloud_kde/daemon/: __init__.py  auth.py  config.py  dbus.py  filesystem.py  legacy.py  lifecycle.py  recovery.py  secrets.py  service.py  state.py
tests/: __init__.py
tests/backend/: test_adapter_contract.py  test_baloo_placeholder_policy.py  test_sync_invariants.py
tests/daemon/: __init__.py  test_auth.py  test_config.py  test_dbus_contract.py  test_desktop_events.py  test_filesystem_semantics.py  test_legacy_migration.py  test_lifecycle.py  test_recovery.py  test_secrets.py  test_service_api.py  test_state.py
tests/fakes/: __init__.py  fake_icloud_backend.py
tests/helpers/: __init__.py  load_vendor_driver.py
tests/kde/: __init__.py  test_baloo_placeholder_smoke.py  test_baloo_static_contract.py  test_kcm_static_contract.py  test_notifier_static_contract.py  test_places_static_contract.py  test_secret_tool_static.py  test_service_menu_static_contract.py
